--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,38 +49,38 @@
     <string name="l1_g1_description7">•\tBe aware of such neuter nouns which have –я ending: время, имя, пламя, племя etc.</string>
     <string name="l1_grammar_1_title_2">Write он before the masculine nouns, она before the feminine nouns, оно before the neuter nouns, and они before the plural nouns.</string>
     <string name="l1_g1_question0">scales</string>
-    <string name="l1_g1_question1">"a wolf "</string>
-    <string name="l1_g1_question2">мост</string>
-    <string name="l1_g1_question3">стихотворение</string>
-    <string name="l1_g1_question4">носки</string>
-    <string name="l1_g1_question5">фамилия</string>
-    <string name="l1_g1_question6">государство </string>
-    <string name="l1_g1_question7">медаль</string>
-    <string name="l1_g1_question8">джинсы </string>
-    <string name="l1_g1_question9">чувство</string>
-    <string name="l1_g1_question10">"a museum "</string>
+    <string name="l1_g1_question1">\"wolf \"</string>
+    <string name="l1_g1_question2">bridge</string>
+    <string name="l1_g1_question3">poem</string>
+    <string name="l1_g1_question4">socks</string>
+    <string name="l1_g1_question5">surname</string>
+    <string name="l1_g1_question6">"state "</string>
+    <string name="l1_g1_question7">medal</string>
+    <string name="l1_g1_question8">"jeans "</string>
+    <string name="l1_g1_question9">feeling</string>
+    <string name="l1_g1_question10">\"museum\"</string>
     <string name="l1_g1_question11">time</string>
     <string name="l1_g1_question12">"history "</string>
     <string name="l1_g1_question13">friendship</string>
     <string name="l1_g1_question14">arcitecture</string>
-    <string name="l1_g1_question15">a word</string>
-    <string name="l1_g1_question16">поколение </string>
-    <string name="l1_g1_question17">словарь </string>
-    <string name="l1_g1_question18">брюки </string>
-    <string name="l1_g1_question19">проблема </string>
-    <string name="l1_g1_question20">очки </string>
-    <string name="l1_g1_question21">деньги </string>
-    <string name="l1_g1_question22">такси </string>
-    <string name="l1_g1_question23">парк</string>
-    <string name="l1_g1_question24">здание </string>
-    <string name="l1_g1_question25">стол </string>
-    <string name="l1_g1_question26">месяц </string>
-    <string name="l1_g1_question27">язык </string>
-    <string name="l1_g1_question28">страна </string>
-    <string name="l1_g1_question29">часы </string>
-    <string name="l1_g1_question30">школа </string>
-    <string name="l1_g1_question31">ножницы </string>
-    <string name="l1_g1_question32">ученик</string>
+    <string name="l1_g1_question15">word</string>
+    <string name="l1_g1_question16">\"generation\"</string>
+    <string name="l1_g1_question17">dicionary</string>
+    <string name="l1_g1_question18">"trousers "</string>
+    <string name="l1_g1_question19">"problem "</string>
+    <string name="l1_g1_question20">glasses</string>
+    <string name="l1_g1_question21">money</string>
+    <string name="l1_g1_question22">"taxi "</string>
+    <string name="l1_g1_question23">park</string>
+    <string name="l1_g1_question24">\"building\"</string>
+    <string name="l1_g1_question25">"table "</string>
+    <string name="l1_g1_question26">month</string>
+    <string name="l1_g1_question27">language</string>
+    <string name="l1_g1_question28">"country "</string>
+    <string name="l1_g1_question29">clock</string>
+    <string name="l1_g1_question30">"school "</string>
+    <string name="l1_g1_question31">"scissors "</string>
+    <string name="l1_g1_question32">puple</string>
     <string name="L1grammar2_title">Plural of nouns</string>
     <string name="l1_g2_description1">*The choice between the endings –ы and –и is determined by  the Rule 1 below.</string>
     <string name="l1_g2_description3">NB! There are some irregular plural forms which can be described according to these rules:</string>
