--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -85,63 +85,63 @@
     <string name="l1_g2_description1">*The choice between the endings –ы and –и is determined by  the Rule 1 below.</string>
     <string name="l1_g2_description3">NB! There are some irregular plural forms which can be described according to these rules:</string>
     <string name="l1_grammar_2_title_2">Write the singular words in the plural and vice versa.</string>
-    <string name="l1_g2_question0"> слово -</string>
-    <string name="l1_g2_question1"> язык -</string>
-    <string name="l1_g2_question2">- вопросы </string>
-    <string name="l1_g2_question3"> город -</string>
-    <string name="l1_g2_question4"> друг -</string>
-    <string name="l1_g2_question5">- растения </string>
-    <string name="l1_g2_question6">- люди </string>
-    <string name="l1_g2_question7"> здание -</string>
-    <string name="l1_g2_question8">- истории </string>
-    <string name="l1_g2_question9"> гора -</string>
-    <string name="l1_g2_question10">- имена </string>
-    <string name="l1_g2_question11"> проблема -</string>
-    <string name="l1_g2_question12">- школы </string>
-    <string name="l1_g2_question13"> время -</string>
-    <string name="l1_g2_question14">- чувства </string>
+    <string name="l1_g2_question0">word</string>
+    <string name="l1_g2_question1">language</string>
+    <string name="l1_g2_question2">questions</string>
+    <string name="l1_g2_question3">city</string>
+    <string name="l1_g2_question4">friend</string>
+    <string name="l1_g2_question5">plants</string>
+    <string name="l1_g2_question6">people</string>
+    <string name="l1_g2_question7">building</string>
+    <string name="l1_g2_question8">stories</string>
+    <string name="l1_g2_question9">mountain</string>
+    <string name="l1_g2_question10">names</string>
+    <string name="l1_g2_question11">problem</string>
+    <string name="l1_g2_question12">schools</string>
+    <string name="l1_g2_question13">time</string>
+    <string name="l1_g2_question14">"feelings "</string>
     <string name="L1grammar3_title">Adjective Agreement: Introduction</string>
     <string name="l1_g3_description1">Adjectives agree with the noun in gender.</string>
     <string name="l1_g3_description2">Think of -ый, -ая, -ое, and -ые as the basic adjective endings that have some slight variations. For example, when the masculine ending is stressed, it is spelled –ой, as in Большой театр.</string>
     <string name="l1_g3_description3">он плох-о́й \t она плох-а́я</string>
     <string name="l1_g3_description4">but: он хоро́ш-ий \t она хоро́ш-ая</string>
     <string name="l1_grammar_2_title_3">Fill in the adjectives with the correct endings according to the gender.</string>
-    <string name="l1_g3_first_0">﻿Больш</string>
-    <string name="l1_g3_second_0"> страна</string>
-    <string name="l1_g3_first_1">Интересн</string>
-    <string name="l1_g3_second_1"> музей </string>
-    <string name="l1_g3_first_2">Длинн</string>
-    <string name="l1_g3_second_2"> история </string>
-    <string name="l1_g3_first_3">Русск</string>
-    <string name="l1_g3_second_3"> словарь </string>
-    <string name="l1_g3_first_4">Нов</string>
-    <string name="l1_g3_second_4"> ученик</string>
-    <string name="l1_g3_first_5">Маленьк</string>
-    <string name="l1_g3_second_5"> ножницы</string>
-    <string name="l1_g3_first_6">Больш</string>
-    <string name="l1_g3_second_6"> стол</string>
-    <string name="l1_g3_first_7">Красив</string>
-    <string name="l1_g3_second_7"> парк </string>
-    <string name="l1_g3_first_8">Нов</string>
-    <string name="l1_g3_second_8"> часы</string>
-    <string name="l1_g3_first_9">Стар</string>
+    <string name="l1_g3_first_0">big</string>
+    <string name="l1_g3_second_0">country</string>
+    <string name="l1_g3_first_1">interesting</string>
+    <string name="l1_g3_second_1">"museum "</string>
+    <string name="l1_g3_first_2">long</string>
+    <string name="l1_g3_second_2">history</string>
+    <string name="l1_g3_first_3">Russian</string>
+    <string name="l1_g3_second_3">dictionary</string>
+    <string name="l1_g3_first_4">new</string>
+    <string name="l1_g3_second_4">puple</string>
+    <string name="l1_g3_first_5">small</string>
+    <string name="l1_g3_second_5">scissors</string>
+    <string name="l1_g3_first_6">big</string>
+    <string name="l1_g3_second_6">table</string>
+    <string name="l1_g3_first_7">pretty</string>
+    <string name="l1_g3_second_7">park</string>
+    <string name="l1_g3_first_8">new</string>
+    <string name="l1_g3_second_8">clock</string>
+    <string name="l1_g3_first_9">old</string>
     <string name="l1_g3_second_9"> архитектура</string>
-    <string name="l1_g3_first_10">Хорош</string>
-    <string name="l1_g3_second_10"> школа</string>
-    <string name="l1_g3_first_11">Нов</string>
-    <string name="l1_g3_second_11"> месяц </string>
-    <string name="l1_g3_first_12">Больш</string>
-    <string name="l1_g3_second_12"> здание</string>
-    <string name="l1_g3_first_13">Маленьк</string>
-    <string name="l1_g3_second_13"> мост</string>
-    <string name="l1_g3_first_14">Хорош</string>
-    <string name="l1_g3_second_14"> стол</string>
-    <string name="l1_g3_first_15">Нов</string>
-    <string name="l1_g3_second_15"> медаль </string>
-    <string name="l1_g3_first_16">Больш</string>
-    <string name="l1_g3_second_16"> брюки</string>
-    <string name="l1_g3_first_17">Маленьк</string>
-    <string name="l1_g3_second_17"> проблема </string>
+    <string name="l1_g3_first_10">good</string>
+    <string name="l1_g3_second_10">school</string>
+    <string name="l1_g3_first_11">new</string>
+    <string name="l1_g3_second_11">month</string>
+    <string name="l1_g3_first_12">big</string>
+    <string name="l1_g3_second_12">building</string>
+    <string name="l1_g3_first_13">small</string>
+    <string name="l1_g3_second_13">bridge</string>
+    <string name="l1_g3_first_14">good</string>
+    <string name="l1_g3_second_14">table</string>
+    <string name="l1_g3_first_15">new</string>
+    <string name="l1_g3_second_15">medal</string>
+    <string name="l1_g3_first_16">big</string>
+    <string name="l1_g3_second_16">trousers</string>
+    <string name="l1_g3_first_17">small</string>
+    <string name="l1_g3_second_17">"problem "</string>
     <string name="score_for_a_game">Score for a game:</string>
     <string name="correct_answers">Number of correct answers:</string>
     <string name="see_errors">Look at your mistakes</string>
@@ -531,25 +531,25 @@
     <string name="L10grammar1_title">Instrumental Case</string>
     <string name="l10_g1_description1">The instrumental case is used in several ways.</string>
     <string name="l10_g1_task1">Write the nouns in the instrumental case.</string>
-    <string name="l10_g1_first_0">﻿1.  Мы гуляем с (подружки) </string>
+    <string name="l10_g1_first_0">гулять - to walk, подружка - girlfriend</string>
     <string name="l10_g1_second_0">.</string>
-    <string name="l10_g1_first_1">2.Машина стоит между (офис) </string>
-    <string name="l10_g1_second_1"> и магазином.</string>
-    <string name="l10_g1_first_2">3.  Художник пишет картину (масло) </string>
+    <string name="l10_g1_first_1">машина - car, стоять - to stand, офис - office</string>
+    <string name="l10_g1_second_1">магазин - shop</string>
+    <string name="l10_g1_first_2">художник - artist, картина - painting, масло - oil painting</string>
     <string name="l10_g1_second_2">.</string>
-    <string name="l10_g1_first_3">4. Писатель делает пометки (карандаш) </string>
+    <string name="l10_g1_first_3">писатель - writer, пометка - note</string>
     <string name="l10_g1_second_3">.</string>
-    <string name="l10_g1_first_4">5. Профессор интересуется (культура) </string>
-    <string name="l10_g1_second_4"> Индии. </string>
-    <string name="l10_g1_first_5">6. Я люблю работать с (люди) </string>
+    <string name="l10_g1_first_4">интересоваться - to be interested in</string>
+    <string name="l10_g1_second_4">Индия - India</string>
+    <string name="l10_g1_first_5">работать - to work, люди - people</string>
     <string name="l10_g1_second_5">.</string>
-    <string name="l10_g1_first_6">7. С (друг) </string>
-    <string name="l10_g1_second_6"> весело всегда! </string>
-    <string name="l10_g1_first_7">8. Поделишься со мной (часть) </string>
-    <string name="l10_g1_second_7"> пирога? </string>
-    <string name="l10_g1_first_8">9.Василий доволен (решение) </string>
-    <string name="l10_g1_second_8"> студента.</string>
-    <string name="l10_g1_first_9">10.  Ты познакомился с её (родители) </string>
+    <string name="l10_g1_first_6">друг - friend</string>
+    <string name="l10_g1_second_6">" весело (adv.) - fun, всегда - always"</string>
+    <string name="l10_g1_first_7">поделиться - to share</string>
+    <string name="l10_g1_second_7">" пирог - pie"</string>
+    <string name="l10_g1_first_8">"быть довольным - to be satisfied, решение - decision "</string>
+    <string name="l10_g1_second_8">" студент - student"</string>
+    <string name="l10_g1_first_9">познакомиться - to get acquainted, родители - parents</string>
     <string name="l10_g1_second_9"> </string>
     <string name="L10grammar2_title">The Reﬂexive Pronoun</string>
     <string name="l10_g2_description1">The pronoun себя (-self ) refers to the subject of the sentence and therefore does not have a nominative.</string>
@@ -557,25 +557,24 @@
     <string name="l10_g2_description3">Ты берешь меня с собой? Do you take me with you?</string>
     <string name="l10_g2_description4">Миша говорит только о себе. Misha talks only about himself.</string>
     <string name="l10_g2_task1">Write possessive or reflexive pronoun.</string>
-    <string name="l10_g2_first_0">﻿1. Мама покупает </string>
-    <string name="l10_g2_second_0"> платье. </string>
-    <string name="l10_g2_first_1">2. Президент выступает с(со) </string>
-    <string name="l10_g2_second_1"> речью.</string>
-    <string name="l10_g2_first_2">3. Догони этого мужчину! Это </string>
-    <string name="l10_g2_second_2"> зонтик! </string>
-    <string name="l10_g2_first_3">4. Догони этого мужчину! Он забыл </string>
-    <string name="l10_g2_second_3"> зонтик. </string>
-    <string name="l10_g2_first_4">5.Катя умеет готовить! </string>
-    <string name="l10_g2_second_4"> торты очень вкусные ! </string>
-    <string name="l10_g2_first_5">6. Катя приготовила </string>
-    <string name="l10_g2_second_5"> первый торт. </string>
-    <string name="l10_g2_first_6">7. Как ты угадал? Ты читаешь </string>
-    <string name="l10_g2_second_6"> мысли?</string>
-    <string name="l10_g2_first_7">8. Следи за </string>
-    <string name="l10_g2_second_7"> словами! </string>
-    <string name="l10_g2_first_8">9.  Катя любит Сережу, особенно </string>
-    <string name="l10_g2_second_8"> голос.</string>
-    <string name="l10_g2_first_9">10. Катя никого не любит. Катя любит только </string>
+    <string name="l10_g2_first_0">покупать - to buy</string>
+    <string name="l10_g2_second_0">"dress "</string>
+    <string name="l10_g2_first_1">\"выступать  - to perform\"</string>
+    <string name="l10_g2_second_1">speech</string>
+    <string name="l10_g2_first_2">"догонять - to catch up "</string>
+    <string name="l10_g2_second_2">umbrella</string>
+    <string name="l10_g2_first_3">забыть - to forget</string>
+    <string name="l10_g2_second_3">umbrella</string>
+    <string name="l10_g2_first_4">\"готовить - to cook\"</string>
+    <string name="l10_g2_second_4">торт - cake, вкусный - delicious</string>
+    <string name="l10_g2_second_5">"первый - first "</string>
+    <string name="l10_g2_first_6">угадать - to guess, читать - to read</string>
+    <string name="l10_g2_second_6">thoughts</string>
+    <string name="l10_g2_first_7">to watch one\'s mouth</string>
+    <string name="l10_g2_second_7">words</string>
+    <string name="l10_g2_first_8">особенно - especially</string>
+    <string name="l10_g2_second_8">voice</string>
+    <string name="l10_g2_first_9">"только - only "</string>
     <string name="l10_g2_second_9">. </string>
 
 
