--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -245,9 +245,9 @@
     <string name="l3_g2_description2">Compare the Nominative case forms of этот with those of тот, and note the plural unusual form.</string>
     <string name="l3_g2_task1">Write the correct forms of  это, этот or тот according to whether It is naming, distinguishing or contrasting.</string>
     <string name="l3_g2_text_0">﻿моя мама</string>
-    <string name="l3_g2_text_1">книга моя, а </string>
+    <string name="l3_g2_text_1">книга - book</string>
     <string name="l3_g2_text_2"> книга твоя</string>
-    <string name="l3_g2_text_3"> газеты хорошие, а</string>
+    <string name="l3_g2_text_3">книга - book</string>
     <string name="l3_g2_text_4"> газеты плохие </string>
     <string name="l3_g2_text_5"> мои сестры </string>
     <string name="l3_g2_text_6"> юноши – мои друзья </string>
